# retro-harness

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.claude/workflows/: retrospection.js
codex/: retrospection.py
configs/: codex.azure-foundry.toml  codex.chatgpt-default.toml
data/: README.md
data/locomo-hard/: README.md  manifest.json
docs/: cli-help.md
method_harness/: README.md
scripts/: analyze_coverage_intra_repo.py  analyze_regrade.py  build_coreset_selection_data.py  build_step_category_density.py  build_steps_vs_success.py  classify_actions.py  clean_ablation_diagnosis.py  consistency_probe.py  diag_fingerprint_geometry.py  extract_hard_locomo_subset.py  gen-cli-help.sh  regen_letta_snapshots.sh  regrade_extraction_failures.py  regrade_persisted_val.py  run-ablations.sh  run-table1.sh  tsne_coverage_embeddings.py  tsne_dpp_picks.py  validate_digest_on_short_solve.py
site/: index.html
src/rho/: __init__.py  __main__.py  cli.py  loop.py  observability.py  protocols.py  reporting.py
tests/: __init__.py  conftest.py  helpers.py
tests/codex/: _az_helper.py  conftest.py  test_evaluate_real_codex.py  test_litellm_coverage_fingerprint_vibe.py  test_litellm_coverage_selector.py  test_litellm_dpp_selector.py  test_litellm_embedder.py  test_litellm_task_judge.py  test_local_embedder.py  test_loop_one_round_real_codex.py  test_loop_real_codex_gaia2.py  test_loop_real_codex_letta_sleep.py  test_loop_real_codex_locomo.py  test_loop_real_codex_swebench_pro.py  test_optimize_real_codex.py  test_solve_real_codex.py  test_swebench_pro_real_e2e.py
tests/hermetic/: _traj_helper.py  conftest.py  test_azure_auth.py  test_build_selector_trajectories.py  test_cache_schema_v3.py  test_caching_agent_e2e.py  test_caching_agent_edge_cases.py  test_cli_dpp.py  test_cli_meta_harness.py  test_cli_reasoningbank.py  test_cli_select.py  test_codex_agent_no_subprocess.py  test_codex_pool.py  test_directory_task.py  test_dpp_core.py  test_dpp_report.py  test_dpp_selector.py  test_evaluate_primitive.py  test_evolve_optimize_strategies_smoke.py  test_evolve_selection_json.py  test_fake_agent.py  test_filesystem_harness_store.py  (+48 more)
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: api.ts  (+3 more)
(+136 files in other folders)
